--- a/ch3.qmd
+++ b/ch3.qmd
@@ -43,10 +43,8 @@ Nous avons donc les deux bornes de notre intervalle de confiance :
 $$ A = \bar{X}_n - \frac{z_{0.99}\sigma}{\sqrt{n}}$$
 $$ B = \bar{X}_n + \frac{z_{0.99}\sigma}{\sqrt{n}} .$$
 Ces deux quantités sont bien des statistiques, car $\sigma$ est connu. De plus, nous venons de montrer que $P_\mu(\mu \in [A,B]) = 99\%$. Ici, le choix de la marge d'erreur $\alpha = 1\%$ ne jouait aucun rôle particulier ; ainsi, un intervalle de confiance de niveau $1-\alpha$ pour l'estimation de $\mu$ est donné par
-$$\left[\bar{X}_n - \frac{z_{1-\alpha}\sigma}{\sqrt{n}}~~;~~\bar{X}_n + \frac{z_{1-\alpha}\sigma}{\sqrt{n}} \right].$$
+$$\left[\bar{X}_n - \frac{z_{1-\alpha}\sigma}{\sqrt{n}}~~;~~\bar{X}_n + \frac{z_{1-\alpha}\sigma}{\sqrt{n}} \right].$${#eq-icgmu1}
 
-
-**Exercice.** Montrer que cet intervalle de confiance est plus grand possible. 
 
 
 **Lorsque $\sigma$ est inconnue. **
@@ -54,19 +52,16 @@ $$\left[\bar{X}_n - \frac{z_{1-\alpha}\sigma}{\sqrt{n}}~~;~~\bar{X}_n + \frac{z_
 
 Lorsque $\sigma$ n'est pas connu, les bornes $A,B$ ci-dessus ne sont pas des statistiques, car elles dépendent de $\sigma$. Heureusement, on peut estimer $\sigma$ sans biais via l'estimateur 
 $$ \hat{\sigma}_n^2 = \frac{1}{n-1}\sum_{i=1}^n (X_i - \bar{X}_n)^2.$$
-Que se passe-t-il si, dans la statistique @eq-pivg, on remplace $\sigma$ par son estimation $\hat{\sigma}_n^2$ ? La loi n'est plus gaussienne. Il se trouve que la loi de 
-$$\frac{\sqrt{n}}{\hat{\sigma}^2_n}(\bar{X}_n - \mu)$${#eq-pivst}
-s'appelle [*loi de Student*](https://fr.wikipedia.org/wiki/Loi_de_Student) à $n-1$ paramètres de liberté. Cette loi de référence est bien connue ; sa densité est 
-$$ \rho_k(x) = \frac{1}{Z_k}\left(\frac{1}{1+\frac{x^2}{k}}\right)^{\frac{k+1}{2}}, $$
-où $Z_k$ est la constante de normalisation donnée par 
-$$ Z_k = \sqrt{k\pi}\frac{\Gamma((k+1)/2)}{\Gamma(k/2)}.$$
-Ses quantiles ont également été calculés avec une grande précision. On notera $t_{k,\alpha}$ le quantile symétrique de niveau $\alpha$ d'une loi de Student de paramètre $k$. Alors, 
+Que se passe-t-il si, dans la statistique @eq-pivg, on remplace $\sigma$ par son estimation $\hat{\sigma}_n^2$ ? On obtient la statistique dite *de Student*, 
+$$T_n = \frac{\sqrt{n}}{\sqrt{\hat{\sigma}_n^2}}(\bar{X}_n - \mu).$${#eq-pivst}
+Sa loi n'est plus une loi gaussienne, mais une loi de Student à $n-1$ paramètres de liberté : le calcul de la densité est fait en détails dans @sec-student1 - @sec-student2. 
+Les quantiles des lois de Student ont été calculés avec précision. On notera $t_{k,\alpha}$ le quantile symétrique de niveau $\alpha$ d'une loi de Student de paramètre $k$. Alors, 
 $$ P_{\mu, \sigma^2}(|T_n|> t_{n-1,\alpha})\leqslant \alpha .$$
 Par le même raisonnement que tout à l'heure, l'inégalité 
 $$ \left|\frac{\sqrt{n}}{\hat{\sigma}^2_n}(\bar{X}_n - \mu)\right| > t_{n-1,\alpha}$$
 est équivalente à 
 $$ \bar{X}_n - \frac{t_{n-1,\alpha}\hat{\sigma}^2_n}{\sqrt{n}} \leqslant \mu \leqslant \bar{X}_n + \frac{t_{n-1,\alpha}\hat{\sigma}^2_n}{\sqrt{n}}.$$
-et les deux côtés de ces inégalités sont des statistiques; en les notant $A,B$, on a bien trouvé un intervalle de confiance de niveau $\alpha$, c'est-à-dire tel que $P_{\mu,\sigma^2}(\mu \in [A,B]) = \alpha$. 
+et les deux côtés de ces inégalités sont des statistiques; en les notant $A,B$, on a bien trouvé un intervalle de confiance de niveau $\alpha$, c'est-à-dire tel que $P_{\mu,\sigma^2}(\mu \in [A,B]) = \alpha$. Cet intervalle de confiance est d'une grande importance en pratique et mérite son propre théorème. Il est dû à [William Gosset](https://en.wikipedia.org/wiki/William_Sealy_Gosset). 
 
 :::{#thm-icg}
 
@@ -85,7 +80,7 @@ Supposons maintenant qu'on désire estimer la variance $\sigma^2$.
 
 En supposant que $\mu$ est connue, l'estimateur des moments le plus naturel pour estimer $\sigma^2$ est évidemment 
 $$ \tilde{\sigma}^2_n = \frac{1}{n}\sum_{i=1}^n (X_i - \mu)^2.$$
-Comme les $(X_i - \mu)/\sigma$ sont des variables aléatoires gaussiennes centrées réduites, l'estimateur $\tilde{\sigma}^2_n \times (n/ \sigma^2)$ est une somme de $n$ gaussiennes standard indépendantes. La loi de cette statistique est connue : c'est une [loi du chi-deux](https://fr.wikipedia.org/wiki/Loi_du_%CF%87%C2%B2) à $n$ paramètres de liberté. Cette loi n'est pas symétrique, puisqu'elle est supportée sur $[0,\infty[$. On note souvent $k^-_{n,\alpha}$ et $k^+_{n,\alpha}$ les nombres les plus éloignées possible (ils exisent) tels que $\mathbb{P}(k^-_{n,\alpha}< \chi^2(n)<k^+_{n,\alpha}) = 1-\alpha$. Ainsi, 
+Comme les $(X_i - \mu)/\sigma$ sont des variables aléatoires gaussiennes centrées réduites, l'estimateur $\tilde{\sigma}^2_n \times (n/ \sigma^2)$ est une somme de $n$ gaussiennes standard indépendantes. La loi de cette statistique est connue : c'est une [loi du chi-deux](https://fr.wikipedia.org/wiki/Loi_du_%CF%87%C2%B2) à $n$ paramètres de liberté comme démontré dans @sec-chideux. Cette loi n'est pas symétrique, puisqu'elle est supportée sur $[0,\infty[$. On note souvent $k^-_{n,\alpha}$ et $k^+_{n,\alpha}$ les nombres les plus éloignées possible (ils exisent) tels que $\mathbb{P}(k^-_{n,\alpha}< \chi^2(n)<k^+_{n,\alpha}) = 1-\alpha$. Ainsi, 
 $$P_{\sigma^2}(k^-_{n,\alpha}< \frac{n \tilde{\sigma}^2_n}{\sigma^2} < k^+_{n,\alpha}) = \alpha.$$
 En pivotant comme dans les exemples précédents, on obtient que l'intervalle 
 $$\left[\frac{n\tilde{\sigma}_n^2}{k^{+}_{n,\alpha}} ~~;~~ \frac{n\tilde{\sigma}_n^2}{k^-_{n,\alpha}} \right] $$
@@ -96,9 +91,12 @@ est un intervalle de confiance de niveau $\alpha$ pour $\sigma^2$.
 Cette fois, on utilise l'estimateur déjà évoqué plus tôt, à savoir 
 $$ \hat{\sigma}_n^2 = \frac{1}{n-1}\sum_{i=1}^n (X_i - \bar{X}_n)^2.$$
 La loi de $(n-1)\hat{\sigma}^2_n / \sigma^2$ est encore une loi du chi-deux, mais à $n-1$ paramètres de liberté. Ainsi, le même raisonnement que ci-dessus donne l'intervalle de confiance de niveau $\alpha$ suivant : 
-$$\left[\frac{(n-1)\tilde{\sigma}_n^2}{k^+_{n-1,\alpha}} ~~;~~ \frac{(n-1)\tilde{\sigma}_n^2}{k^-_{n-1,\alpha}} \right]. $$
+$$\left[\frac{(n-1)\hat{\sigma}_n^2}{k^+_{n-1,\alpha}} ~~;~~ \frac{(n-1)\hat{\sigma}_n^2}{k^-_{n-1,\alpha}} \right]. $$
 
 ## Exemples asymptotiques
 
-- Estimation du paramètre $p$ dans un modèle de Bernoulli. 
-- Estimation de moyenne dans un modèle non-gaussien. 
+À écrire. 
+
+### Estimation du paramètre $p$ dans un modèle de Bernoulli. 
+
+### Estimation de moyenne dans un modèle non-gaussien. 
